--- a/app/src/main/res/layout/activity_mode_en_ligne.xml
+++ b/app/src/main/res/layout/activity_mode_en_ligne.xml
@@ -2,29 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ModeEnLigne">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.5"
+        android:layout_height="0dp"
+        android:layout_weight="0.75"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="337dp"
-            android:layout_weight="1"
+            android:layout_height="191dp"
+            android:layout_weight="0.9"
             app:srcCompat="@drawable/LoupsGarous_presentation" />
 
         <AutoCompleteTextView
             android:id="@+id/saisie_pseudo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.1"
             android:gravity="center"
             android:text="Saisis ton nom !"
             android:textSize="30sp"
@@ -35,8 +36,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="165dp"
-        android:layout_weight="0.5"
+        android:layout_height="0dp"
+        android:layout_weight="0.25"
         android:orientation="vertical">
 
         <Button
