--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.5"
         android:gravity="top"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/banniere_choix_mode"
