--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
-        android:gravity="top"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/banniere_choix_mode"
-            android:contentDescription="Banniere loup garou choix du mode"
             android:layout_width="match_parent"
-            android:layout_height="182dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:contentDescription="Banniere loup garou choix du mode"
             app:srcCompat="@drawable/banniere_loup_garou" />
 
     </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:orientation="vertical"
+            android:gravity="center">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="75dp"
-                android:gravity="center_horizontal"
+                android:layout_height="0dp"
+                android:layout_weight="0.33"
+                android:gravity="center"
                 android:text="@string/choix_mode"
                 android:textColor="#B91A4A"
-                android:textSize="23sp"
+                android:textSize="36dp"
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <Button
                 android:id="@+id/bouton_mode_narrateur"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.33"
                 android:text="@string/node_narrateur"
                 android:padding="35sp"
                 android:textColor="#010000"/>
@@ -48,10 +53,11 @@
             <Button
                 android:id="@+id/boutton_mode_ligne"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0.33"
                 android:text="@string/mode_ligne"
                 android:padding="35sp"
                 android:textColor="#010000" />
 
         </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
