--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,19 +8,18 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="0.5"
         android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/banniere_choix_mode"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:contentDescription="Banniere loup garou choix du mode"
-            app:srcCompat="@drawable/banniere_loup_garou" />
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="181dp"
+            app:srcCompat="@drawable/lg" />
+
 
     </LinearLayout>
 
